# toolMe

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .dockerignore  Dockerfile  README.md  main.py  pyproject.toml
backend/app/: __init__.py  auth.py  config.py  database.py  dependencies.py  email_client.py  limiter.py  main.py  seed.py
backend/app/crud/: projects.py  submissions.py  users.py
backend/app/models/: __init__.py  message.py  project.py  submission.py  user.py
backend/app/routers/: auth.py  projects.py  submissions.py
backend/app/schemas/: __init__.py  project.py  submission.py  user.py
backend/tests/: conftest.py  test_api.py  test_api_submissions.py  test_auth.py  test_auth_password.py  test_crud_projects.py  test_crud_submissions.py  test_email_client.py
docs/: MAX_150_LINES.md  QA_REVIEW_AUTH.md  SECURITY_AUDIT_FOLLOWUP.md  SECURITY_AUDIT_REPORT.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  i18n.ts  index.css  utils.test.ts  utils.ts
frontend/src/api/: auth.test.ts  auth.ts  config.ts  projects.test.ts  projects.ts  submissions.test.ts  submissions.ts
frontend/src/components/: DeleteAccountSection.tsx  Footer.tsx  Header.tsx  LandingHighlight.test.tsx  Layout.tsx  (+10 more)
robot/: README.md  playwright-log.txt  pyproject.toml  requirements.txt
robot/resources/: auth.resource.robot  project.resource.robot  submission.resource.robot  variables.robot
robot/tests/: auth_api.robot  auth_login.robot  auth_protected.robot  auth_signup.robot  owner_announce.robot  project_owner_edit_delete.robot  project_publish.robot  submission_workflow.robot
(+32 files in other folders)
